# AML_project

./: .gitignore  AMLpro1.ipynb  FISTA.py  README.md  dataset_prep.py  labeled_log_reg.py  pyproject.toml  unlabeled_log_reg.py
Project1_AML/: .gitignore  AMLpro1.ipynb
Project1_AML/reports/: AMLreport1.tex
Project2_AML/Models/: 01_feature_selection.ipynb  datifier.py  logistic_regression_business_experiment.py  logistic_regression_experiment.py  logreg_svm.ipynb  new_attempt.ipynb  new_data.py  svm_business_experiment.py  svm_experiment.py  trees_xgboost.ipynb  xtrain.npy
Project2_AML/Models/utils/: business_scoring.py  business_scoring_sanity_checks.py  data_processing.py  logistic_regression_workflow.py  svm_workflow.py
Project2_AML/data/: y_train.txt
Project2_AML/report/: AMLreport2.tex
Project2_AML/utils/: data_processing.py
reports/: AMLreport1.fdb_latexmk  AMLreport1.fls  AMLreport1.tex
